--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
-  "name": "cloud-helper",
-  "version": "0.0.0",
+  "name": "template",
+  "version": "0.0.1",
   "description": "",
-  "main": "src/index.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "/dist"
+  ],
   "scripts": {
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
